# Group-augmentation-Cpp

./: .gitignore  CMakeLists.txt  Code.docx  LICENSE  README.md  f  group augmentation.txt  main.cpp  run_ubelix.sh  ubelix.sh  ubelix_results.sh
GroupAug/: GroupAug.sln
GroupAug/Debug/: GroupAug.ilk
GroupAug/GroupAug/: GroupAug.vcxproj  group augmentation.txt
Group_augmentation_RN/: Group_augmentation_RN.sln
Group_augmentation_RN/Group_augmentation_RN/: Group_augmentation_RN.vcxproj  Group_augmentation_RN.vcxproj.filters  group_augmentation.txt  group_augmentation_last_generation.txt
Group_augmentation_RN/Release/: Group_augmentation_RN.iobj  Group_augmentation_RN.ipdb
R_files/: Formulas in the code.R  Genes graphs.R  Last generation.R  reaction_norms.R
Visual GA/: README.md  main.cpp
deployment/: build.sh  moveToCloud.sh  moveToFolder.sh  run_branches.sh  run_local.sh  ubelix-test.sh  ubelix.sh
lib/: libyaml-cpp.dylib  libyaml-cpp.so.0.6
parameters/: K2-NRN.yml  K2-No_help.yml  K2-No_relatedness.yml  K2-RN-No_help.yml  K2-RN.yml  K2-X05-NRN.yml  K2-X05-No_help.yml  K2-X05-RN-Dispersal.yml  K2-X05-RN-No_help.yml  K2-X05-RN.yml  K2-X05-Xh02-NRN.yml  K2-X05-Xh02-No_help.yml  K2-X05-Xh02-No_relatedness.yml  K2-X05-Xh02-RN-Dispersal.yml  K2-X05-Xh02-RN-No_help.yml  K2-X05-Xh02-RN.yml  K2-Xh02-Xn0-No_relatedness.yml  K2-Xh02-Xn0-RN.yml  K2-Xh02-Xn02-NRN.yml  K2-Xh02-Xn02-No_help.yml  K2-Xh02-Xn02-RN-Dispersal.yml  K2-Xh02-Xn02-RN-No_help.yml  K2-Xh02-Xn02-RN.yml  K2-Xn02-NRN.yml  K2-Xn02-No_help.yml  K2-Xn02-RN-No_help.yml  K2-Xn02-RN.yml  LSF-n1-NRN.yml  LSF-n1-RN.yml  LSF-n2-NRN.yml  LSF-n2-RN.yml  LSF-n3-NRN.yml  LSF-n3-RN.yml  Low-survival-B_K2-X05-Xh02-RN.yml  No-GA_K2-RN.yml  X04-Xh02-Xn04-NRN.yml  X05-Xh02-Xn04-NRN.yml  X05-Xh02-Xn04-No_help.yml  X05-Xh02-Xn04-No_relatedness.yml  X05-Xh02-Xn04-RN-Dispersal.yml  (+91 more)
parameters/All disperse/: K2-Xh02-Xn0-NRN.yml  K2-Xh02-Xn0-RN.yml  X07-Xh02-Xn0-NRN.yml  X07-Xh02-Xn0-RN.yml  bias10-K2-NRN.yml  bias10-K2-X05-NRN.yml  bias10-K2-X05-RN.yml  bias10-K2-X05-Xh02-NRN.yml  bias10-K2-X05-Xh02-RN.yml  bias10-K2-X05-Xh02-Xn02-NRN.yml  bias10-K2-X05-Xh02-Xn02-RN.yml  bias10-K2-Xh02-Xn0-NRN.yml  bias10-K2-Xh02-Xn0-RN.yml  bias10-K2-Xh02-Xn02-NRN.yml  bias10-K2-Xh02-Xn02-RN.yml  bias10-K2-Xn02-NRN.yml  bias10-NRN.yml  bias10-X05-NRN.yml  bias10-X05-RN.yml  bias10-X05-Xh02-NRN.yml  bias10-X05-Xh02-RN.yml  bias10-X05-Xh02-Xn02-NRN.yml  bias10-X05-Xh02-Xn02-RN.yml  bias10-Xh02-Xn0-NRN.yml  bias10-Xh02-Xn0-RN.yml  bias10-Xh02-Xn02-NRN.yml  bias10-Xh02-Xn02-RN.yml  bias10-Xn02-NRN.yml  bias10-Xn02-RN.yml
parameters/BroodCareOnly/: noRelatedness_m02-Xn3-1000.yml  noRelatedness_m02-Xn3.yml  noRelatedness_m02-Xn4.yml  noRelatedness_m03-Xn3.yml  noRelatedness_m03-Xn4.yml
parameters/Default/: RN-Dispersal.yml  RN-Help.yml  X04-Xh02-Xn04-NRN.yml  X04-Xh02-Xn04-RN.yml  X05-Xh02-Xn04-RN-Dispersal.yml  X05-Xh02-Xn04-RN-Help.yml  X06-NRN.yml  X06-RN.yml  X06-Xh02-Xn04-NRN.yml  X06-Xh02-Xn04-RN.yml  X06-Xh06-Xn06-NRN.yml  X06-Xh06-Xn06-RN.yml  bias1-RN.yml  bias1.yml  bias10-RN.yml  bias10-X06-NRN.yml  bias10-X06-RN.yml  bias10-X06-Xh02-Xn04-NRN.yml  bias10-X06-Xh02-Xn04-RN.yml  bias10.yml  bias2-RN.yml  bias2.yml  bias3-RN.yml  bias3.yml  bias4-RN.yml  bias5-RN.yml  bias5.yml  bias7-RN.yml  bias7.yml
parameters/DelayedInheritance/: noRelatedness_m02-Age2.yml  noRelatedness_m02-Age3.yml  noRelatedness_m02-RN-Age2.yml  noRelatedness_m02-RN-Age3.yml  noRelatedness_m02-RN.yml  noRelatedness_m02.yml  noRelatedness_m023-Age2.yml  noRelatedness_m023-Age3.yml  noRelatedness_m023-RN-Age2.yml  (+17 more)
src/: Parameters.cpp  Parameters.h  Simulation.cpp  Simulation.h  Statistics.cpp  Statistics.h  main.cpp  parameters.h  test.cpp
(+1201 files in other folders)
